@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.otaku" name="Otaku" provider-name="TeamOtaku" version="0.3.68">
+<addon id="plugin.video.otaku" name="Otaku" provider-name="TeamOtaku" version="0.3.69">
   <requires>
     <!-- <import addon="xbmc.python" version="2.24.0"/> -->
     <import addon="script.module.beautifulsoup4" version="4.5.3" />
@@ -25,9 +25,8 @@
       <fanart>fanart.jpg</fanart>
     </assets>
     <news>
-Changelog 0.3.68 [20230427]:
-- Handled Consumet error
-- Added New Context menu "mark as completed"
+Changelog 0.3.69 [20230507]:
+- Handle season and episode as integers
     </news>
   </extension>
 </addon>
