@@ -1,3 +1,6 @@
+Changelog 0.3.69 [20230507]:
+- Handle season and episode as integers
+
 Changelog 0.3.68 [20230427]:
 - Handled Consumet error
 - Added New Context menu "mark as completed"
